--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="public/logo_nt.jpg" style="border-radius: 100%">
-    <title>NovaTech</title>
+    <title>OceanWatch</title>
   </head>
-  <body class="bg-cyan-900">
+  <body class="bg-teal-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
